# LanguageCreationTools

./: .gitignore  LICENSE  README.md  pyproject.toml
languagecreationtools/: main.py  program_config.yaml
languagecreationtools/config/: config_parser.py
languagecreationtools/linguistic_components/: ipa.py  ipa_alphabet.py
languagecreationtools/processing/: preprocessing.py
languagecreationtools/specific_language/: language_config.yaml  phonetic_inventory.py
